@@ -40,6 +40,7 @@ Version 1.4.23 - SVN
   - Improvements for compatibility with PHP 5.4.
   - Added option that allows users to have replies to their own
     messages sent to the recipient of the previous message (#3520988).
+  - Added Solarized Light and Solarized Dark themes, by Pavneet Arora.
 
 Version 1.4.22 - 12 July 2011
 -----------------------------
